[package]
name = "upstash-redis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
casey = "0.3.3"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"

[[example]]
name = "basic"

[dev-dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
