[package]
name = "upstash-redis-rs"
version = "0.1.2"
edition = "2021"
authors = ["Jinser Kafak <cmdr.jv@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jetjinser/upstash-redis-rs"
repository = "https://github.com/jetjinser/upstash-redis-rs.git"
description = "A upstash redis rest API client."
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/upstash-redis-rs"
categories = ["web-programming::http-client"]
keywords = ["upstash", "upstash-api", "redis"]

[dependencies]
async-trait = "0.1.68"
paste = "1.0.12"
thiserror = "1.0.40"

reqwest = { version = "0.11.17", features = ["json"] }
url = "2.3.1"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "basic"
